--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,7 +3,7 @@ name: Run Unit Tests For All Separate Branches
 on:
   push:
     branches:
-      - Victoria   # Change this to your specific feature branch
+      - Victoria
       - Javon
       - Todasha
       - jin
@@ -11,37 +11,37 @@ on:
       - james
   pull_request:
     branches:
-      - Victoria   # Change this to your specific feature branch
+      - Victoria
       - Javon
       - Todasha
       - jin
       - tumi
       - james
+
 jobs:
   test:
     runs-on: ${{ matrix.os }}
+    
+    # Matrix configuration to run tests on multiple OS (Ubuntu, MacOS, Windows)
     strategy:
       matrix:
-          os: [ubuntu-latest, macos-latest, windows-latest]   # Matrix to run tests on all three platforms
-    
+        os: [ubuntu-latest, macos-latest, windows-latest]
     steps:
-      # Checkout the repository
+      # Step 1: Checkout the repository code
       - name: Checkout Repository
         uses: actions/checkout@v2
 
-      # Set up Python
+      # Step 2: Set up Python environment
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: '3.x'  # This will automatically pick up the version specified in `Pipfile` or `pyproject.toml`
-
-      # Install dependencies
+          python-version: '3.x'
+      # Step 3: Install dependencies
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt  # Discover requirements file in the root directory
-
-      # Run the unit tests
+          pip install -r requirements.txt
+      # Step 4: Run the unit tests
       - name: Run unit tests
         run: |
-          python -m unittest discover -p "test_*.py"  # Discover test file in the root directory
+          python -m unittest tests/test.py
