--- a/.github/workflows/test3.yml
+++ b/.github/workflows/test3.yml
@@ -17,23 +17,22 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-    
     steps:
-      # Step 1: Checkout the repository code
       - name: Checkout Repository
         uses: actions/checkout@v3
 
-      # Step 2: Set up Python environment
       - name: Set up Python
         uses: actions/setup-python@v3
         with:
           python-version: '3.x'
-      # Step 3: Install dependencies
-      - name: Install dependencies
+        
+      - name: Install xvfb and dependencies
         run: |
+          sudo apt-get update
+          sudo apt-get install -y xvfb
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-      # Step 4: Run the unit tests
-      - name: Run unit tests
+
+      - name: Run unit tests with xvfb
         run: |
-          python -m unittest test.py
+          xvfb-run python -m unittest test.py
