--- a/.github/workflows/test3.yml
+++ b/.github/workflows/test3.yml
@@ -25,14 +25,14 @@ jobs:
         uses: actions/setup-python@v3
         with:
           python-version: '3.x'
-        
-      - name: Install xvfb and dependencies
+
+      - name: Install dependencies
         run: |
-          sudo apt-get update
-          sudo apt-get install -y xvfb
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Run unit tests with xvfb
+      - name: Set environment variable to disable GUI and audio
         run: |
-          xvfb-run python -m unittest test.py
+          export SDL_VIDEODRIVER=dummy
+          export PYGAME_HIDE_SUPPORT_PROMPT=1
+          python -m unittest test.py
