--- a/.github/workflows/test2.yml
+++ b/.github/workflows/test2.yml
@@ -35,13 +35,11 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           
-      # Step 4: Disable audio in pygame (to avoid WASAPI issue)
-      - name: Disable Pygame Audio Initialization
-        run: |
-          echo "import pygame; pygame.mixer.quit()" > disable_audio.py
+      # Step 4: Set environment variable to skip pygame mixer initialization
+      - name: Skip Pygame Audio Initialization
+        run: echo "PYGAME_HIDE_SUPPORT_PROMPT=1" >> $GITHUB_ENV
 
-      # Step 5: Run the unit tests with disabled audio
+      # Step 5: Run the unit tests
       - name: Run unit tests
         run: |
-          python disable_audio.py  # Disable audio before running the tests
           python -m unittest test.py
