--- a/.github/workflows/test2.yml
+++ b/.github/workflows/test2.yml
@@ -31,18 +31,11 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Set environment variables for audio
+      - name: Set environment variables for audio and video
+        env:
+              SDL_VIDEODRIVER: "dummy"
+              SDL_AUDIODRIVER: "disk"
+               
+      - name: Run unit tests
         run: |
-          echo "Setting SDL_AUDIODRIVER to dummy"
-          set SDL_AUDIODRIVER=dummy
-          echo "Setting PYGAME_HIDE_SUPPORT_PROMPT to 1"
-          set PYGAME_HIDE_SUPPORT_PROMPT=1
-
-      - name: Run unit tests and handle errors gracefully
-        run: |
-          python -c "import unittest, sys;
-          try:
-              unittest.main(module='test', argv=sys.argv, exit=False)
-          except Exception as e:
-              # Catch any errors and continue the tests
-              print(f'Error encountered: {e}. Skipping problematic tests and continuing.')"
+          python -m unittest test.py
