--- a/.github/workflows/test3.yml
+++ b/.github/workflows/test3.yml
@@ -1,5 +1,5 @@
 ---
-name: Run Unit Tests For Ubuntu Linux with all push
+name: Run Unit Tests For Ubuntu with all push
 
 on:
   push:
@@ -25,19 +25,19 @@ jobs:
         uses: actions/setup-python@v3
         with:
           python-version: '3.x'
-        
-      - name: Install xvfb and dependencies
+
+      - name: Install dependencies
         run: |
-          sudo apt-get update
-          sudo apt-get install -y xvfb pulseaudio  # Add pulseaudio to simulate audio
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Set SDL_AUDIODRIVER to dummy (to bypass audio issues in headless environments)
+      - name: Set environment variables for audio and video
         run: |
-          echo "Setting SDL_AUDIODRIVER to dummy"
-          export SDL_AUDIODRIVER=dummy
+          echo "SDL_VIDEODRIVER=dummy" >> $GITHUB_ENV
+          echo "SDL_AUDIODRIVER=disk" >> $GITHUB_ENV
 
-      - name: Run unit tests with xvfb
+      - name: Run unit tests
         run: |
-          xvfb-run python -m unittest test.py || echo "Skipping tests due to sound initialization error"
+          export SDL_VIDEODRIVER=dummy
+          export SDL_AUDIODRIVER=disk
+          python -m unittest test.py
