--- a/.github/workflows/test3.yml
+++ b/.github/workflows/test3.yml
@@ -17,11 +17,6 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ubuntu-20.04, ubuntu-22.04]
-
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
@@ -35,16 +30,11 @@ jobs:
         run: |
           sudo apt-get update --fix-missing
           sudo apt-get install libsdl2-dev libsdl2-image-dev libsdl2-mixer-dev libsdl2-ttf-dev libfreetype6-dev libportmidi-dev libjpeg-dev python3-setuptools python3-dev
+          sudo apt-get install xvfb python3-tk python3-dev
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           python -m pip install sphinx numpy>=1.21.0 "Cython>=3.0,<3.1"
 
-      - name: Set environment variables for audio and video
+      - name: Run unit tests pyautogui and pymouse with Xvfb
         run: |
-          echo "SDL_VIDEODRIVER=dummy" >> $GITHUB_ENV
-          echo "SDL_AUDIODRIVER=disk" >> $GITHUB_ENV
-          echo "DISPLAY=:0" >> $GITHUB_ENV
-          
-      - name: Run unit tests
-        run: |
-          python -m unittest test.py
+          xvfb-run -a -s "-screen 0 640x480x8" python -m unittest test.py
