--- a/.github/workflows/test3.yml
+++ b/.github/workflows/test3.yml
@@ -28,6 +28,7 @@ jobs:
 
       - name: Install dependencies
         run: |
+          npm install
           sudo apt-get update --fix-missing
           sudo apt-get install libsdl2-dev libsdl2-image-dev libsdl2-mixer-dev libsdl2-ttf-dev libfreetype6-dev libportmidi-dev libjpeg-dev python3-setuptools python3-dev
           sudo apt-get install xvfb python3-tk python3-dev
@@ -35,6 +36,6 @@ jobs:
           pip install -r requirements.txt
           python -m pip install sphinx numpy>=1.21.0 "Cython>=3.0,<3.1"
 
-      - name: Run unit tests pyautogui and pymouse with Xvfb
+      - name: Run unit tests with Xvfb in headless mode
         run: |
-          xvfb-run -a -s "-screen 0 640x480x8" python -m unittest test.py
+          xvfb-run --auto-servernum python -m unittest test.py
