--- a/.github/workflows/testFiles.yml
+++ b/.github/workflows/testFiles.yml
@@ -1,4 +1,4 @@
-name: Check Required Game Files Push/Pull (Mac, Win, Ubu) with Node.js
+name: Check Required Game Files Push/Pull (Mac, Ubu) with Node.js
 
 on:
   push:
@@ -14,7 +14,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest, macos-latest]
 
     steps:
       - name: Checkout code
